<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="@drawable/bgcolor">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:background="@drawable/img"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <ImageView
        android:id="@+id/mahasiswaImageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="fitCenter" />

    <!-- Data mahasiswa -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- Kolom status -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="@color/colortext" />
        </LinearLayout>

        <!-- Kolom semester -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/semesterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorsemester" />
        </LinearLayout>
    </LinearLayout>

    <!-- Data Mahasiswa -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:background="@drawable/sudut"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datamhs"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Nama -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Nama"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/namaTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- NIM -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/NIM"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/nimTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- Kelas -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Kelas"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/kelasTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- Gender -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Gender"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/genderTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- TTL -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Birth"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/birthTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- Email -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

                <!-- No HP -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/No.HP"
                        android:textStyle="bold"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textColor="@color/colortext"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/hpTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_weight="3" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>




    </LinearLayout>
</LinearLayout>
